  11 Jul 2019; Agostino Sarubbo <ago@gentoo.org> -queuemetrics-19.04.1.ebuild,
  -queuemetrics-19.04.3.ebuild, queuemetrics-19.04.3-r1.ebuild:
  app-metrics/queuemetrics: use https mirror, remove old

*queuemetrics-19.04.3-r1 (03 Jul 2019)

  03 Jul 2019; Agostino Sarubbo <ago@gentoo.org> +files/server.xml,
  +queuemetrics-19.04.3-r1.ebuild, files/25queuemetrics:
  app-metrics/queuemetrics: install a custom server.xml, protect server.xml via
  env.d, add a way and an ewarn about the tomcat update, remove the ewarn about
  the restart, update tomcat to 8.5.42

  28 Jun 2019; Agostino Sarubbo <ago@gentoo.org> queuemetrics-19.04.1.ebuild,
  queuemetrics-19.04.3.ebuild:
  app-metrics/queuemetrics: use apache-tomcat official mirror

  27 Jun 2019; Agostino Sarubbo <ago@gentoo.org> files/queuemetrics.initd:
  app-metrics/queuemetrics: we don't need to instance 1GB of ram to shutdown
  tomcat, so overwrite xms and xmx in the stop function

*queuemetrics-19.04.3 (16 Jun 2019)

  16 Jun 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.04.3.ebuild:
  app-metrics/queuemetrics: version bump to 19.04.3

  15 Jun 2019; Agostino Sarubbo <ago@gentoo.org> files/queuemetrics.initd:
  app-metrics/queuemetrics: Fix init script: --stdout and --stderr are only
  relevant with --start

  29 May 2019; Agostino Sarubbo <ago@gentoo.org> files/queuemetrics.confd:
  app-metrics/queuemetrics: prefer ipv4 over ipv6

  08 May 2019; Agostino Sarubbo <ago@gentoo.org> +files/25queuemetrics,
  queuemetrics-19.04.1.ebuild:
  app-metrics/queuemetrics: keep configuration files

*queuemetrics-19.04.1 (02 May 2019)

  02 May 2019; Agostino Sarubbo <ago@gentoo.org> +files/queuemetrics.confd,
  +files/queuemetrics.initd, +metadata.xml, +queuemetrics-19.04.1.ebuild:
  app-metrics/queuemetrics: First commit for queuemetrics/uniloader