@@ -1,0 +1,2 @@
+[Service]
+Environment="JAVA_OPTS=-server -Xms1024m -Xmx1024m -Djava.util.logging.config.file=/opt/queuemetrics/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Djava.security.egd=file:/dev/./urandom -Djava.endorsed.dirs=/opt/queuemetrics/tomcat/endorsed -classpath /opt/queuemetrics/tomcat/bin/bootstrap.jar:/opt/queuemetrics/tomcat/bin/tomcat-juli.jar -Dcatalina.base=/opt/queuemetrics/tomcat -Dcatalina.home=/opt/queuemetrics/tomcat -Djava.io.tmpdir=/opt/queuemetrics/tomcat/temp -Dtomcat.instance=queuemetrics -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -XX:InitiatingHeapOccupancyPercent=45 -XX:+PrintGCDateStamps -verbose:gc -XX:+PrintGCDetails -Xloggc:/opt/queuemetrics/tomcat/logs/gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=50M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/queuemetrics/tomcat/logs/hprof.hprof -Dorg.apache.catalina.connector.RECYCLE_FACADES=true -Dorg.apache.catalina.core.StandardHostValve.ACCESS_SESSION=true -Djava.net.preferIPv4Stack=true"
