@@ -1,0 +1,9 @@
+[Unit]
+Description=QueueMetrics
+Conflicts=queuemetrics.service
+
+[Socket]
+ListenStream=8080
+
+[Install]
+WantedBy=sockets.target
